[Srijan] Add . Ability to retrieve, add, upadte and delete data in the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=addressbookapp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db
-spring.datasource.username=root
-spring.datasource.password=Er_srijan0412@
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
