[Srijan] Add . Added Slf4j for logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #debug=true
+
+# Set log level (TRACE, DEBUG, INFO, WARN, ERROR)
+logging.level.root=INFO
+logging.level.com.bridgelabz.addressbookapp=DEBUG
+
+# Log to a file
+logging.file.name=logs/application.log
+
+# Log format pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
