--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
 			<version>1.18.36</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
